# powergrid

./: .gitignore  default.nix  power_grid.hs  powergrid.cabal
src/: Main.hs
