cabal-version:       2.4
name:                powergrid
version:             0.1.0.0
synopsis:            An assistant for playing the board game Power Grid.
author:              Matthew Hart
maintainer:          matthart4@gmail.com

executable powergrid
  main-is:             Main.hs
  build-depends:       base, containers, transformers, microlens, microlens-th
  hs-source-dirs:      src
  default-language:    Haskell2010
